2007-02-25  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala, vala/valacodegenerator.vala: improve
	  subtyping suport for structs

2007-02-25  Jürg Billeter  <j@bitron.ch>

	* tests/test-026.vala, tests/test-026.out: test hidden base method
	  access
	* tests/Makefile.am: update
	* vala/valasemanticanalyzer.vala: correct symbol_reference for base
	  access, add current_struct field

2007-02-25  Jürg Billeter  <j@bitron.ch>

	* tests/test-010.vala, tests/test-010.out: enhance assignment test
	* vala/valasemanticanalyzer.vala: correct bracketing in compound
	  assignments

2007-02-25  Jürg Billeter  <j@bitron.ch>

	* vala/valacodenode.vala: add to_string method

2007-02-25  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vala: improve GSource support

2007-02-22  Raffaele Sandrini  <rasa@gmx.ch>

	* vala/valacodegenerator.vala: don't allow NULL terminated arrays of
	  value-type structs and remove the check on such arrays in a freach
	  statement

2007-02-21  Jürg Billeter  <j@bitron.ch>

	* vala/valacallback.vala: support using instance methods as static
	  callbacks

2007-02-19  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vala: more string functions (patch by Cayle Graumann)

2007-02-18  Raffaele Sandrini  <rasa@gmx.ch>

	* vala/valainterfacewriter.vala: fix indentation for class definitions

2007-02-04  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vala: add GLib.Queue

2007-02-04  Jürg Billeter  <j@bitron.ch>

	* vala/valaconstant.vala: fix global constants
	* vapi/glib-2.0.vala: add NoArrayLength attribute to Process functions

2007-02-04  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala: use correct type cname in array creation
	  expression, don't assume that all string arrays own their content

2007-02-04  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y: fix crash when parsing array creation expression

2006-12-23  Jürg Billeter  <j@bitron.ch>

	* vala/valaattribute.vala: add get_bool method for boolean values